--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -26,25 +26,25 @@
 		</div>
 		<div class="imagelist_container">
 			<div class="imagelist hideable hidden">
-				<a href="#">
+				<a href="?s=5&amp;c=2&amp;a=-1">
 					<div class="image_container">
 						<img src="images/5_2_1.png">
 						<div class="image_popup">ACM ICPC</div>
 					</div>
 				</a>
-				<a href="#">
+				<a href="?s=5&amp;c=2&amp;a=-1">
 					<div class="image_container">
 						<img src="images/5_2_2.jpg">
 						<div class="image_popup">学术论坛</div>
 					</div>
 				</a>
-				<a href="#">
+				<a href="?s=5&amp;c=2&amp;a=-1">
 					<div class="image_container">
 						<img src="images/5_2_3.jpg">
 						<div class="image_popup">辩论赛</div>
 					</div>
 				</a>
-				<a href="#">
+				<a href="?s=5&amp;c=2&amp;a=-1">
 					<div class="image_container">
 						<img src="images/5_2_4.jpg">
 						<div class="image_popup">演讲比赛</div>
