--- a/CS_WEB/index.html
+++ b/CS_WEB/index.html
@@ -13,26 +13,28 @@
 	</head>
 	<body>
 		<div id="header" class="hidden"></div>
-		<div id="index"></div>
-		<div id="content">
-			<div id="sidebar_container" class="hideable hidden">
-				<div id="sidebar" class="floatable">
-					<div id="sidebar_header"></div>
-					<div id="sidebar_navi"></div>
-				</div>
-			</div>
-			<div id="article_container">
-				<div id="location_container" class="hideable hidden">
-					<div id="location">
-						<div id="loc_prompt"></div>
-						<div id="loc_entry_1"></div>
-						<div id="loc_sep_1"></div>
-						<div id="loc_entry_2"></div>
-						<div id="loc_sep_2"></div>
-						<div id="loc_entry_3"></div>
+		<div id="main">
+			<div id="index"></div>
+			<div id="content">
+				<div id="sidebar_container" class="hideable hidden">
+					<div id="sidebar" class="floatable">
+						<div id="sidebar_header"></div>
+						<div id="sidebar_navi"></div>
 					</div>
 				</div>
-				<div id="placeholder" class="hideable hidden"></div>
+				<div id="article_container">
+					<div id="location_container" class="hideable hidden">
+						<div id="location">
+							<div id="loc_prompt"></div>
+							<div id="loc_entry_1"></div>
+							<div id="loc_sep_1"></div>
+							<div id="loc_entry_2"></div>
+							<div id="loc_sep_2"></div>
+							<div id="loc_entry_3"></div>
+						</div>
+					</div>
+					<div id="placeholder" class="hideable hidden"></div>
+				</div>
 			</div>
 		</div>
 		<div id="footer" class="hidden"></div>
