No Reloading Index

--- a/CS_WEB/index_cn.html
+++ b/CS_WEB/index_cn.html
@@ -1,21 +1,21 @@
 <script src="js/jquery.event.move.js"></script>
 <script src="js/jquery.event.swipe.js"></script>
 <script src="js/unslider.min.js"></script>
-<div id="slide_container" class="hideable hidden"><div id="slide"><ul></ul></div></div>
+<div id="slide_container" class="hideable hidden"></div>
 <div class="columns">
 	<div id="column1" class="column">
 		<div class="col_header hideable hidden">
 			<div class="header_title hideable hidden">集体活动</div>
 			<div class="header_more hideable hidden"><a href="?s=1&amp;c=3">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
+		<div class="itemlist_container"></div>
 	</div>
 	<div id="column2" class="column">
 		<div class="col_header hideable hidden">
 			<div class="header_title hideable hidden">取向动态</div>
 			<div class="header_more hideable hidden"><a href="?s=1&amp;c=2">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
+		<div class="itemlist_container"></div>
 	</div>
 </div>
 <div class="columns">
@@ -90,7 +90,7 @@
 			<div class="header_title hideable hidden">招生动态</div>
 			<div class="header_more hideable hidden"><a href="?s=6">MORE&nbsp;&raquo;</a></div>
 		</div>
-		<div class="itemlist_container"><table class="itemlist hideable hidden"></table></div>
+		<div class="itemlist_container"></div>
 	</div>
 	<div id="column6" class="column">
 		<div class="col_header hideable hidden">
