--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>Testing Site for CSDTC Official Homepage</title>
 		<meta charset="utf-8">
-		<meta http-equiv="refresh" content="0; URL=http://5ki3s0x1c9.github.io/fuzzy-tribble/CS_WEB/">
+		<meta http-equiv="refresh" content="0; URL=http://w1ndy.github.io/fuzzy-tribble/CS_WEB/">
 	</head>
 	<body>
-		<p>Please visit <a href="http://5ki3s0x1c9.github.io/fuzzy-tribble/CS_WEB/index.html">
-			http://5ki3s0x1c9.github.io/fuzzy-tribble/CS_WEB/index.html</a></p>
+		<p>Please visit <a href="http://w1ndy.github.io/fuzzy-tribble/CS_WEB/">
+			http://w1ndy.github.io/fuzzy-tribble/CS_WEB/</a></p>
 	</body>
 </html>
